升级jetty以支持jdk11

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 #Server Port
 serverPort=9090
 #Comma seperated list of all the zookeeper servers
-zkServer=localhost:2181,localhost:2181
+zkServer=localhost:2181,localhost:2182,localhost:2183
 #Http path of the repository. Ignore if you dont intent to upload files from repository.
 scmRepo=http://myserver.com/@rev1=
 #Path appended to the repo url. Ignore if you dont intent to upload files from repository.
@@ -27,10 +27,10 @@ jdbcPwd=manager
 #jdbcPwd=manager
 loginMessage=Please login using admin/manager or appconfig/appconfig.
 #session timeout 5 mins/300 secs.
-sessionTimeout=300
+sessionTimeout=3600
 #Default 5 seconds to keep short lived zk sessions. If you have large data then the read will take more than 30 seconds so increase this accordingly. 
 #A bigger zkSessionTimeout means the connection will be held longer and resource consumption will be high.
-zkSessionTimeout=5
+zkSessionTimeout=60
 #Block PWD exposure over rest call.
 blockPwdOverRest=false
 #ignore rest of the props below if https=false.
